fixed overflow bug

--- a/src/components/Thumbnails/ProductImageSlider.module.css
+++ b/src/components/Thumbnails/ProductImageSlider.module.css
@@ -1,5 +1,5 @@
 @media (max-width: 516px) {
   .slider_container {
-    height: 107.5vw !important;
+    height: 105.2vw !important;
   }
 }
