--- a/src/components/Thumbnails/ThumbnailSlider.module.css
+++ b/src/components/Thumbnails/ThumbnailSlider.module.css
@@ -1,6 +1,7 @@
 .container {
   height: 606px;
   max-height: 606px;
+  overflow: hidden;
 }
 
 .columns_container {
